FMD更新, 配置文件Reader/Writer, ASM优化, 变量分配系统